@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.93.2.18 2002/05/14 16:24:23 mike Exp $"
+ * "$Id: printers.c,v 1.93.2.19 2002/05/15 21:02:28 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -1752,6 +1752,16 @@ write_printcap(void)
     return;
 
  /*
+  * Put a comment header at the top so that users will know where the
+  * data has come from...
+  */
+
+  fputs("# This file was automatically generated by cupsd(1m) from the\n", fp);
+  fprintf(fp, "# %s/printers.conf file.  All changes to this file\n",
+          ServerRoot);
+  fputs("# will be lost.\n", fp);
+
+ /*
   * Write a new printcap with the current list of printers.
   */
 
@@ -2075,5 +2085,5 @@ write_irix_state(printer_t *p)	/* I - Printer to update */
 
 
 /*
- * End of "$Id: printers.c,v 1.93.2.18 2002/05/14 16:24:23 mike Exp $".
+ * End of "$Id: printers.c,v 1.93.2.19 2002/05/15 21:02:28 mike Exp $".
  */
